--- a/app/src/main/res/layout/activity_edit_resume.xml
+++ b/app/src/main/res/layout/activity_edit_resume.xml
@@ -12,7 +12,7 @@
         android:paddingBottom="14dp">
         
         <ImageView
-            android:id="@+id/closeBtn"
+            android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
