--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -16,21 +16,34 @@
         android:padding="10dp">
         
         
+        <ImageView
+            android:id="@+id/applicantsBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginRight="40dp"
+            android:src="@mipmap/ic_profile_24dp"
+            app:layout_constraintBottom_toBottomOf="@id/editBtn"
+            app:layout_constraintEnd_toStartOf="@id/editBtn"
+            app:layout_constraintTop_toTopOf="@id/editBtn" />
+        
+        
         <TextView
-            android:id="@+id/applicants"
-            style="@style/TextAppearance.AppCompat.Large"
+            android:id="@+id/applicantsNumber"
+            style="@style/AppTheme.TextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:lineSpacingExtra="0dp"
-            android:text="300 Applicants"
-            android:textColor="@color/black"
+            
+            android:background="@drawable/oval_red"
+            android:gravity="center"
+            android:text="10"
+            
+            android:textColor="@color/white"
+            android:textSize="8sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@id/applicantsBtn"
+            app:layout_constraintTop_toTopOf="@id/applicantsBtn" />
+        
         
         <TextView
             android:id="@+id/editBtn"
@@ -44,7 +57,7 @@
             android:textColor="@color/colorPrimary"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/applicants" />
+            app:layout_constraintTop_toTopOf="parent" />
         
         
         <de.hdodenhof.circleimageview.CircleImageView
@@ -56,7 +69,7 @@
             android:src="@drawable/job_holder"
             
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/applicants" />
+            app:layout_constraintTop_toBottomOf="@id/editBtn" />
         
         <TextView
             android:id="@+id/positionTitle"
@@ -199,10 +212,11 @@
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_marginTop="20dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="10dp"
             app:cardElevation="@dimen/elevation"
+            
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/date">
@@ -234,6 +248,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/date" />
         
@@ -262,6 +277,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine1" />
         
@@ -280,6 +296,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/descriptionValue" />
         
@@ -308,6 +325,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine2" />
         
@@ -326,6 +344,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/responsibilitiesValue" />
         
@@ -334,6 +353,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginTop="6dp"
+            
             android:background="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="@id/qualificationsText"
             app:layout_constraintStart_toStartOf="@id/qualificationsText"
@@ -354,6 +374,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine3" />
         
@@ -372,6 +393,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/qualificationsValue" />
         
@@ -392,19 +414,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/headerLine4"
             tools:itemCount="5"
             tools:listitem="@layout/skill_item_layout" />
-        
-        <ProgressBar
-            android:id="@+id/skillsProgress"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/skills"
-            app:layout_constraintEnd_toEndOf="@id/skills"
-            app:layout_constraintStart_toStartOf="@id/skills"
-            app:layout_constraintTop_toTopOf="@id/skills" />
         
         
         <TextView
@@ -421,6 +434,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/skills" />
         
@@ -449,6 +463,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine5" />
         
@@ -467,6 +482,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/salaryValue" />
         
@@ -495,6 +511,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine6" />
         
@@ -513,6 +530,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/educationValue" />
         
@@ -541,6 +559,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine7" />
         
@@ -553,7 +572,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="30dp"
             android:layout_weight="1"
-            android:visibility="visible"
+            android:visibility="gone"
             app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="20dp"
             app:cardElevation="@dimen/elevation"
@@ -581,8 +600,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/blackTransparent"
-            android:padding="160dp"
             android:clickable="true"
+            android:padding="160dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
