--- a/app/src/main/res/layout/activity_resume.xml
+++ b/app/src/main/res/layout/activity_resume.xml
@@ -65,90 +65,90 @@
                 android:layout_height="match_parent"
                 app:contentScrim="@color/transparent"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
-                
+    
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_collapseMode="parallax"
                     app:layout_scrollFlags="scroll|enterAlways|snap">
-                    
-                    
+        
+        
                     <ImageView
                         android:id="@+id/closeBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:src="@drawable/ic_close_white_24dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-                    
-                    
+        
+        
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profile_image"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginTop="12dp"
                         android:scaleType="centerCrop"
-                       
+            
                         app:layout_constraintStart_toStartOf="@+id/closeBtn"
                         app:layout_constraintTop_toBottomOf="@+id/closeBtn" />
-                    
+        
                     <LinearLayout
                         android:id="@+id/info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginLeft="8dp"
-                        
+            
                         android:orientation="vertical"
                         app:layout_constraintStart_toEndOf="@+id/profile_image"
                         app:layout_constraintTop_toTopOf="@+id/profile_image">
-                        
+            
                         <TextView
                             android:id="@+id/name"
                             style="@style/TextAppearance.AppCompat.Large"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                         
+                
                             android:textColor="@color/white"
                             android:textStyle="bold" />
-                        
+            
                         <TextView
                             android:id="@+id/specs"
                             style="@style/AppTheme.MediumTextAppearance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
-                       
+                
                             android:textColor="@color/white"
                             android:textStyle="bold" />
-                        
-                        
+            
+            
                         <LinearLayout
                             android:id="@+id/location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
-                            
+                
                             <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/ic_close_white_24dp" />
-                            
+                                android:layout_width="15dp"
+                                android:layout_height="15dp"
+                                android:src="@drawable/location_ic" />
+                
                             <TextView
                                 android:id="@+id/locationText"
                                 style="@style/AppTheme.TextAppearanceSmall"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                         
+                    
                                 android:textColor="@color/white" />
                         </LinearLayout>
-                    
-                    
+        
+        
                     </LinearLayout>
-    
+        
                     <TextView
                         android:id="@+id/bioText"
                         style="@style/AppTheme.TextAppearance"
