--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:lineSpacingExtra="0dp"
-            android:text="300 Applicants"
+            android:text="Job offer"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
