- Trello Issues. - Applicants. - Firebase New Account.

--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -137,6 +137,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toStartOf="@id/date"
             app:layout_constraintStart_toEndOf="@id/image"
             app:layout_constraintTop_toBottomOf="@id/location">
@@ -152,7 +153,7 @@
                 android:paddingLeft="@dimen/lg_padding"
                 android:paddingEnd="@dimen/lg_padding"
                 android:paddingRight="@dimen/lg_padding"
-                android:text="category"
+                android:text="@string/Category"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -164,14 +165,13 @@
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/ic_view_tag_bg"
                 android:paddingStart="@dimen/lg_padding"
                 android:paddingLeft="@dimen/lg_padding"
                 android:paddingEnd="@dimen/lg_padding"
                 android:paddingRight="@dimen/lg_padding"
-                android:text="subCategory"
+                android:text="@string/SubCategory"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -186,7 +186,7 @@
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_marginTop="20dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:cardBackgroundColor="@color/transparent"
             app:cardCornerRadius="10dp"
             app:cardElevation="@dimen/elevation"
@@ -196,9 +196,10 @@
             
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/apply"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:background="@color/colorPrimary"
                 android:shadowColor="@color/grayDarkTextColor"
                 android:text="@string/Apply"
