--- a/app/src/main/res/layout/edit_references_item_layout.xml
+++ b/app/src/main/res/layout/edit_references_item_layout.xml
@@ -10,8 +10,8 @@
     
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +29,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:background="@color/white"
-        android:text="@string/name"
+        android:hint="@string/references"
+        android:minWidth="100dp"
         android:textColor="@color/grayDarkTextColor"
         android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/icon"
         app:layout_constraintTop_toTopOf="parent" />
