- Add next/prev arrows in ad details page and business detail page if there is more than one image - Jobs are empty when device is arabic - Add my jobs list in the profile page - Have you tested the push notifications ? change contact us email from "almersalgroupe@gmail.com" to "info@almersal.co"
- Finishing Trello Issues.

--- a/app/src/main/res/layout/activity_add_new_job.xml
+++ b/app/src/main/res/layout/activity_add_new_job.xml
@@ -700,7 +700,7 @@
             android:id="@+id/progress"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/blackTransparent"
+            android:background="@color/transparent"
             android:clickable="true"
             android:padding="160dp"
             android:visibility="gone"
