--- a/app/src/main/res/layout/activity_jobs_search.xml
+++ b/app/src/main/res/layout/activity_jobs_search.xml
@@ -6,9 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".activities.JobsSearchActivity">
     
+    
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
+    
     <android.support.v7.widget.CardView
         android:id="@+id/filter_container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="?android:actionBarSize"
         android:layout_margin="@dimen/sm_margin"
         android:layout_marginTop="10dp"
@@ -18,7 +30,7 @@
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/backBtn">
         
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -75,9 +87,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:background="@color/blackTransparent"
+        android:background="@color/transparent"
         android:padding="170dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
