--- a/app/src/main/res/layout/activity_edit_job.xml
+++ b/app/src/main/res/layout/activity_edit_job.xml
@@ -700,7 +700,7 @@
             android:id="@+id/progress"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/blackTransparent"
+            android:background="@color/transparent"
             android:clickable="true"
             android:padding="160dp"
             android:visibility="gone"
