--- a/app/src/main/res/layout/subcategory_subscription_bottom_sheet.xml
+++ b/app/src/main/res/layout/subcategory_subscription_bottom_sheet.xml
@@ -4,32 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent">
-
+    
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        
         <android.support.constraint.Guideline
             android:id="@+id/hGuideline"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5" />
-
+        
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/titleLabel"
             style="@style/AppTheme.TextAppearance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginBottom="@dimen/xlg_margin"
             android:gravity="center"
             android:text="@string/selectTopicsDoYou"
             android:textAlignment="gravity"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:layout_marginBottom="@dimen/xlg_margin"
             app:layout_constraintBottom_toTopOf="@+id/myCategoriesStateLayout" />
-
+        
         <com.brainsocket.mainlibrary.Views.Stateslayoutview
             android:id="@+id/myCategoriesStateLayout"
             android:layout_width="match_parent"
@@ -40,16 +40,16 @@
             app:WaitingLayout="@layout/state_layout_waiting"
             app:layout_constraintBottom_toTopOf="@+id/subCategoryTitle"
             app:layout_constraintTop_toBottomOf="@id/categorySperator">
-
+            
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/myCategories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/lg_margin"
                 app:tagBackgroundColor="@color/colorPrimary" />
-
+        
         </com.brainsocket.mainlibrary.Views.Stateslayoutview>
-
+        
         <android.support.constraint.ConstraintLayout
             android:id="@+id/subCategoryTitle"
             android:layout_width="match_parent"
@@ -60,50 +60,80 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/hGuideline">
-
+            
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/businessSubCategories"
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|left"
-                android:paddingEnd="0dp"
-                android:paddingLeft="@dimen/md_margin"
-                android:paddingRight="0dp"
                 android:paddingStart="@dimen/md_margin"
+                android:paddingLeft="@dimen/md_margin"
+                android:paddingEnd="0dp"
+                android:paddingRight="0dp"
                 android:text="@string/SubCategories"
                 android:textAlignment="gravity"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            
             <View
                 android:id="@+id/subCategorySperator"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/sperator"
                 android:layout_margin="@dimen/sm_margin"
-                android:layout_marginLeft="@dimen/md_margin"
                 android:layout_marginStart="@dimen/md_margin"
+                android:layout_marginLeft="@dimen/md_margin"
                 android:background="@color/colorPrimary"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/businessSubCategories"
                 app:layout_constraintWidth_default="percent"
                 app:layout_constraintWidth_percent="0.3" />
-
+        
         </android.support.constraint.ConstraintLayout>
-
+        
         <com.almersal.android.views.SuggestionTagView
             android:id="@+id/suggestionTags"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:padding="@dimen/md_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/applyBtn"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subCategoryTitle" />
-
+            app:layout_constraintTop_toBottomOf="@id/subCategoryTitle" />
+        
+        
+        <android.support.v7.widget.CardView
+            android:id="@+id/applyBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
+            android:visibility="visible"
+            app:cardBackgroundColor="@color/transparent"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="@dimen/elevation"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+            
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/apply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:shadowColor="@color/grayDarkTextColor"
+                android:text="@string/Apply"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </android.support.v7.widget.CardView>
+    
     </android.support.constraint.ConstraintLayout>
 
 </com.brainsocket.mainlibrary.Views.Stateslayoutview>
