--- a/app/src/main/res/layout/job_search_item_layout.xml
+++ b/app/src/main/res/layout/job_search_item_layout.xml
@@ -21,8 +21,8 @@
             android:layout_marginTop="12dp"
             android:scaleType="centerCrop"
             android:src="@drawable/job_holder"
-            app:layout_constraintStart_toStartOf="@+id/closeBtn"
-            app:layout_constraintTop_toBottomOf="@+id/closeBtn" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         
         <TextView
             android:id="@+id/title"
