--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -420,6 +421,49 @@
                                 android:layout_marginTop="@dimen/lg_margin"
                                 app:tagBackgroundColor="@color/colorPrimary" />
                         </com.brainsocket.mainlibrary.Views.Stateslayoutview>
+                        
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/jobOffersText"
+                            style="@style/AppTheme.TextAppearance"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/md_margin"
+                            android:text="@string/job_offers"
+                            android:textColor="@color/profileHeaderColor"
+                            android:textStyle="bold"
+                            app:layout_constraintTop_toBottomOf="@+id/myBusinessStateLayout" />
+                        
+                        
+                        <View
+                            android:id="@+id/jobOffersSeparator"
+                            android:layout_width="0dp"
+                            android:layout_height="@dimen/sperator"
+                            android:background="@color/colorPrimary"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/jobOffersText"
+                            app:layout_constraintWidth_default="percent"
+                            app:layout_constraintWidth_percent="0.3" />
+                        
+                        
+                        <ImageView
+                            android:id="@+id/jobsPlaceHolder"
+                            android:layout_width="match_parent"
+                            android:layout_height="150dp"
+                            android:src="@drawable/employee"
+                            
+                            app:layout_constraintTop_toBottomOf="@+id/jobsRecycler" />
+                        
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/jobsRecycler"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:visibility="gone"
+                            
+                            app:layout_constraintTop_toBottomOf="@+id/jobOffersSeparator"
+                            tools:itemCount="10"
+                            tools:listitem="@layout/job_search_item_layout" />
                     
                     </android.support.constraint.ConstraintLayout>
                     
@@ -479,7 +523,7 @@
         </android.support.v4.widget.NestedScrollView>
         
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/flexible.example.fab"
+            android:id="@+id/profileImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@drawable/ic_user_placeholder_24dp"
